# sc_faust

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  testsuite.scd
.github/workflows/: build.yml
src/: library.cpp  library.h  sc_faust.cpp  sc_faust.h  sc_ui.h
src/sc/Classes/: Faust.sc
src/sc/HelpSource/: Faust.schelp  FaustDef.schelp
